--- a/test.properties
+++ b/test.properties
@@ -6,20 +6,22 @@ mysql.conn=jdbc:mysql://mysql:3306/battery?characterEncoding=utf8&useSSL=false
 mysql.user=battery
 mysql.passwd=Abcd.123
 mail.to=wangjie_zn@gotion.com.cn,ids_alarm@gotion.com.cn
-alarm.delayTime={"\u4E94\u83F1":10,"\u6C5F\u6DEE":10,"\u745E\u9A70":10,"\u5409\u5229":10,"\u5947\u745E":10,"\u5947\u745E\u5546\u7528\u8F66":10,"\u79FB\u52A8\u5145\u7535\u8F66":40,"\u5409\u667A":25,"\u5E7F\u901A":30,"\u5408\u4F17":30,"\u521B\u7EF4":50,"\u4E0A\u6C7D\u5927\u901A":40,"\u5409\u5229\u5546\u7528\u8F66":40}
+alarm.delayTime={"五菱":10,"江淮":10,"瑞驰":10,"吉利":10,"奇瑞":10,"奇瑞商用车":10,"移动充电车":40,"吉智":25,"广通":30,"合众":30,"创维":50,"上汽大通":40,"吉利商用车":40}
 delay.time=10
+#?????????????h
+max.send.time=2
 start.hour=8
 end.hour=20
-# \u4E94\u83F1    1
-# \u6C5F\u6DEE    2
-# \u745E\u9A70    4
-# \u5409\u5229    5
-# \u5947\u745E    6
-# \u5947\u745E\u5546\u7528\u8F66    7
-# \u79FB\u52A8\u5145\u7535\u8F66    13
-# \u5409\u667A    14
-# \u5E7F\u901A    16
-# \u5408\u4F17    15
-# \u521B\u7EF4    9
-# \u4E0A\u6C7D\u5927\u901A    19
-# \u5409\u5229\u5546\u7528\u8F66    18
+# 五菱    1
+# 江淮    2
+# 瑞驰    4
+# 吉利    5
+# 奇瑞    6
+# 奇瑞商用车    7
+# 移动充电车    13
+# 吉智    14
+# 广通    16
+# 合众    15
+# 创维    9
+# 上汽大通    19
+# 吉利商用车    18
