去除吉利商用车

--- a/test.properties
+++ b/test.properties
@@ -6,7 +6,7 @@ mysql.conn=jdbc:mysql://mysql:3306/battery?characterEncoding=utf8&useSSL=false
 mysql.user=battery
 mysql.passwd=Abcd.123
 mail.to=wangjie_zn@gotion.com.cn,ids_alarm@gotion.com.cn
-alarm.delayTime={"五菱":10,"江淮":10,"瑞驰":10,"吉利":10,"奇瑞":10,"奇瑞商用车":10,"移动充电车":40,"吉智":25,"广通":30,"合众":30,"创维":50,"上汽大通":40,"吉利商用车":40}
+alarm.delayTime={"五菱":10,"江淮":10,"瑞驰":10,"吉利":10,"奇瑞":10,"奇瑞商用车":10,"移动充电车":40,"吉智":25,"广通":30,"合众":30,"创维":50,"上汽大通":40}
 delay.time=1
 #?????????????h
 max.send.time=2
