优化邮件发送时间的逻辑

--- a/test.properties
+++ b/test.properties
@@ -6,13 +6,13 @@ mysql.conn=jdbc:mysql://mysql:3306/battery?characterEncoding=utf8&useSSL=false
 mysql.user=battery
 mysql.passwd=Abcd.123
 mail.to=xupengfei_cp@gotion.com.cn,wangjie_zn@gotion.com.cn,liuwei_bms@gotion.com.cn,luodazhi@gotion.com.cn,zhengzhonghua@gotion.com.cn,zhangli@gotion.com.cn,caihao@gotion.com.cn,luolueqi@gotion.com.cn
-alarm.delayTime={"五菱":10,"江淮":10,"瑞驰":10,"吉利":10,"奇瑞":10,"移动充电车":40,"吉智":25,"广通":30,"合众":40,"创维":200,"上汽大通":120}
+alarm.delayTime={"五菱":10,"江淮":10,"瑞驰":10,"吉利":10,"奇瑞":10,"移动充电车":40,"吉智":25,"广通":30,"合众":40,"创维":200,"上汽大通":120,"绿色慧联":120}
 delay.time=12
 #定义相同报警的最大发送时间h
 max.send.time=4
 start.hour=8
 end.hour=20
-password=Battery@123
+password=Battery@1234
 # 五菱    1
 # 江淮    2
 # 瑞驰    4
